# edx2gift

./: .env.dist  .gitignore  .gitlint  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
edx2gift/: __init__.py  api.py  cli.py
edx2gift/static/: index.html
gitlint/: gitlint_emoji.py
tests/: conftest.py  test_api.py  test_cli.py
